# NIMQtClient

./: .gitignore  CMakeLists.txt  Qrc.qrc  READ.md  README.md  main.cpp
nim_sdk/audio_video/api/: nertc_audio_device_manager.h  nertc_device_collection.h  nertc_engine.h  nertc_engine_defines.h  nertc_engine_event_handler.h  nertc_engine_event_handler_ex.h  nertc_engine_ex.h  nertc_engine_media_stats_observer.h  nertc_error_code.h  nertc_introduction.h  nertc_video_device_manager.h  nertc_warn_code.h
nim_sdk/include/: Doxyfile  README.md  nim_chatroom.h  nim_chatroom_def.h  nim_chatroom_res_code_def.h  nim_client.h  nim_client_def.h  nim_doc_trans.h  nim_doc_trans_def.h  nim_friend.h  nim_friend_def.h  nim_global_def.h  nim_msglog.h  nim_msglog_def.h  nim_nos.h  nim_nos_def.h  nim_pass_through_proxy.h  nim_pass_through_proxy_def.h  nim_plugin_in.h  nim_plugin_in_def.h  nim_robot.h  nim_robot_def.h  nim_rts.h  nim_rts_def.h  nim_session.h  nim_session_def.h  nim_session_online_service_def.h  nim_signaling.h  nim_signaling_def.h  nim_subscribe_event.h  nim_subscribe_event_def.h  nim_super_team.h  nim_super_team_def.h  nim_sysmsg.h  nim_sysmsg_def.h  nim_talk.h  nim_talk_def.h  nim_talkex.h  nim_talkex_def_collect.h  nim_talkex_def_pin_message.h  (+19 more)
nim_sdk/lib/: nim.lib  nim_chatroom.lib  nim_tools_http.lib  nrtc.lib
nim_sdk/wrapper/: CMakeLists.txt  Doxyfile  README.md
nim_sdk/wrapper/nim_chatroom_cpp_wrapper/: CMakeLists.txt  nim_cpp_chatroom_api.h
nim_sdk/wrapper/nim_chatroom_cpp_wrapper/api/: nim_chatroom_cpp.cpp  nim_chatroom_cpp.h
nim_sdk/wrapper/nim_chatroom_cpp_wrapper/helper/: nim_chatroom_helper.h
nim_sdk/wrapper/nim_cpp_wrapper/: CMakeLists.txt  nim_cpp_api.h  nim_sdk_cpp_wrapper.h
nim_sdk/wrapper/nim_cpp_wrapper/api/: nim_cpp_client.cpp  nim_cpp_client.h  nim_cpp_doc_trans.h  nim_cpp_friend.h  nim_cpp_msglog.cpp  nim_cpp_msglog.h  nim_cpp_nos.cpp  nim_cpp_nos.h  nim_cpp_pass_through_proxy.h  nim_cpp_plugin_in.h  nim_cpp_robot.h  nim_cpp_rts.cpp  nim_cpp_rts.h  nim_cpp_session.cpp  nim_cpp_session.h  nim_cpp_session_online_service.h  nim_cpp_signaling.h  nim_cpp_subscribe_event.h  nim_cpp_super_team.h  nim_cpp_sysmsg.h  nim_cpp_talk.cpp  nim_cpp_talk.h  nim_cpp_talkex.h  nim_cpp_talkex_pin_message.cpp  nim_cpp_talkex_quick_comment.cpp  nim_cpp_team.cpp  nim_cpp_team.h  nim_cpp_tool.h  nim_cpp_user.h  nim_cpp_vchat.cpp  nim_cpp_vchat.h
nim_sdk/wrapper/nim_cpp_wrapper/helper/: nim_client_helper.cpp  nim_client_helper.h  nim_msg_helper.cpp  nim_msg_helper.h  nim_msglog_helper.h  nim_session_online_service_helper.h  nim_signaling_helper.h  nim_subscribe_event_helper.h  nim_super_team_helper.cpp  nim_super_team_helper.h  nim_talk_helper.h  nim_talkex_helper_pin_message.cpp  nim_talkex_helper_quick_comment.h  nim_team_helper.cpp  nim_team_helper.h
nim_sdk/wrapper/nim_tools_cpp_wrapper/: CMakeLists.txt  nim_tools_http_cpp.cpp  nim_tools_http_cpp.h
nim_sdk/wrapper/nim_wrapper_util/: callback_proxy.h  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp  nim_sdk_util.cpp  nim_sdk_util.h
nim_sdk/wrapper/nim_wrapper_util/json/: assertions.h  autolink.h  config.h  features.h  forwards.h  json.h  reader.h  value.h  version.h  writer.h
res/css/: listWidget.css  recentSessionWidget.css
src/: client.cpp  client.h  init.cpp  login.cpp  message_send_receive.cpp
src/rtc/: NEEventHandler.cpp  NEEventHandler.h  NERtcEngine.cpp  NERtcEngine.h
window/: qmainwindow.cpp  qmainwindow.h  toollabel.cpp
window/addFriend/: addfriendwidget.cpp  addfriendwidget.h
window/chattingWidget/: chattingitem.cpp  chattingitem.h  chattingteamwindow.cpp  chattingteamwindow.h  chattingwindow.cpp  chattingwindow.h  videocommunicatewidget.cpp  videocommunicatewidget.h  videowidget.cpp  videowidget.h
window/friendsWidget/: frienditem.cpp  frienditem.h  friendlistwidget.cpp  friendlistwidget.h
window/login/: loginwindow.cpp  loginwindow.h  registerwidget.cpp  registerwidget.h
window/messageWidget/: message.h  messageitem.cpp  messageitem.h  recentsessionwidget.cpp  recentsessionwidget.h
window/recentSessionWidget/: message.h  recentsessionwidget.cpp  recentsessionwidget.h  sessionitem.cpp  sessionitem.h
window/teamWidget/: createteamitem.cpp  createteamitem.h  createteamwidget.cpp  createteamwidget.h  teaminfowidget.cpp  teaminfowidget.h  teamitem.cpp  teamitem.h  teamlistwidget.cpp  teamlistwidget.h
window/userinfo/: userinfowidget.cpp  userinfowidget.h
window/util/: clickablelabel.cpp  clickablelabel.h  toollabel.h  util.cpp  util.h
